--- a/online-coding-interviews/frontend/templates/index.html
+++ b/online-coding-interviews/frontend/templates/index.html
@@ -126,6 +126,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.30.0/mode-css.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.30.0/theme-monokai.min.js"></script>
     <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
+    <script src="{{ url_for('static', filename='pyodide-worker.js') }}"></script>
     <script src="{{ url_for('static', filename='app.js') }}"></script>
 </body>
 </html>
