--- a/online-coding-interviews/frontend/templates/editor.html
+++ b/online-coding-interviews/frontend/templates/editor.html
@@ -47,8 +47,6 @@
                                 <option value="go">Go</option>
                                 <option value="rust">Rust</option>
                                 <option value="sql">SQL</option>
-                                <option value="html">HTML</option>
-                                <option value="css">CSS</option>
                             </select>
                         </div>
 
@@ -110,6 +108,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.30.0/mode-css.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.30.0/theme-monokai.min.js"></script>
     <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
+    <script src="https://sql.js.org/dist/sql-wasm.js"></script>
     <script src="{{ url_for('static', filename='editor.js') }}"></script>
 </body>
 </html>
